# transient_smash

./: .gitignore  CITATION.cff  LICENSE.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  question.yml
docs/: api.md  conf.py  index.rst
examples/: G_transientSBI.ipynb  ModelInterface_Examples.ipynb  transientSBI.ipynb  transientSBI.py
examples/sbi-logs/NLE_A/2025-09-12T13_05_00.561875/: events.out.tfevents.1757678700.TUD502239.5142.0
examples/sbi-logs/NLE_A/2025-09-12T13_08_56.574683/: events.out.tfevents.1757678936.TUD502239.5424.0
examples/sbi-logs/NLE_A/2025-09-12T13_09_11.274233/: events.out.tfevents.1757678951.TUD502239.5453.0
examples/sbi-logs/NLE_A/2025-09-12T13_13_55.947692/: events.out.tfevents.1757679235.TUD502239.5728.0
examples/sbi-logs/NLE_A/2025-09-12T13_14_28.087650/: events.out.tfevents.1757679268.TUD502239.5773.0
examples/sbi-logs/NLE_A/2025-09-12T13_16_07.254551/: events.out.tfevents.1757679367.TUD502239.5859.0
examples/sbi-logs/NLE_A/2025-09-12T13_16_16.521494/: events.out.tfevents.1757679376.TUD502239.5913.0
examples/sbi-logs/NLE_A/2025-09-12T13_16_20.958881/: events.out.tfevents.1757679380.TUD502239.5969.0
examples/sbi-logs/NLE_A/2025-09-12T13_20_18.685178/: events.out.tfevents.1757679618.TUD502239.6141.0
examples/sbi-logs/NLE_A/2025-09-12T13_21_21.248556/: events.out.tfevents.1757679681.TUD502239.6195.0
examples/sbi-logs/NLE_A/2025-09-12T13_23_25.795633/: events.out.tfevents.1757679805.TUD502239.6622.0
examples/sbi-logs/NLE_A/2025-09-12T13_28_14.315549/: events.out.tfevents.1757680094.TUD502239.7371.0
examples/sbi-logs/NLE_A/2025-09-12T13_29_54.592414/: events.out.tfevents.1757680194.TUD502239.7611.0
examples/sbi-logs/NLE_A/2025-09-12T13_44_26.003909/: events.out.tfevents.1757681066.TUD502239.8351.0
examples/sbi-logs/NLE_A/2025-09-12T13_44_54.780586/: events.out.tfevents.1757681094.TUD502239.8440.0
licenses/: LICENSE.rst
notebooks/: G_transientSBI.ipynb  ModelInterface_Examples.ipynb
src/transient_smash/: __init__.py
src/transient_smash/models/: exceptions.py  model.py
src/transient_smash/sbi_interface/: __init__.py  sbi_interface.py
tests/models/: test_model.py
tests/sbi_interface/: test_sbi_interface.py
transient_smash/: .gitignore
(+74 files in other folders)
