[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "transient_smash"
description = "Python package for detecting and simulating transient events"
requires-python = ">=3.10"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]
[project.urls]
repository = "https://github.com/luigigisolfi/transient_smash"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["transient_smash*"]
exclude = ["transient_smash._dev*"]

[tool.setuptools_scm]
version_file = "transient_smash/_version.py"

[tool.pytest.ini_options]
testpaths = [
  "transient_smash",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"
norecursedirs = ["transient_smash[\\/]_dev"]

[tool.coverage.run]
omit = [
 "transient_smash/__init*",
 "transient_smash/conftest.py",
 "transient_smash/*setup_package*",
 "transient_smash/tests/*",
 "transient_smash/*/tests/*",
 "transient_smash/extern/*",
 "transient_smash/version*",
 "*/transient_smash/__init*",
 "*/transient_smash/conftest.py",
 "*/transient_smash/*setup_package*",
 "*/transient_smash/tests/*",
 "*/transient_smash/*/tests/*",
 "*/transient_smash/extern/*",
 "*/transient_smash/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
